Bug 40842 - [945GM SNA] Playing video using Xv causes UI to flicker
Summary: [945GM SNA] Playing video using Xv causes UI to flicker
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-13 09:25 UTC by Paul Neumann
Modified: 2011-09-13 10:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log with --enable-debug=full and reproducing the glitches. (25.15 KB, text/plain)
2011-09-13 10:11 UTC, Paul Neumann
no flags Details

Description Paul Neumann 2011-09-13 09:25:50 UTC
With SNA enabled, playing a video using Xv causes green (or sometimes pink) flicker on many parts of the UI.
As far as I can can tell, the flicker appears on areas that are to be animated, like hovering over an inactive tab or any button, but also some other static UI elements like tooltips or menus. It also appears on the area where the video is played (it is always the whole frame then) for a fraction of a second and repeats about every second.
Comment 1 Chris Wilson 2011-09-13 09:30:52 UTC
Xv using the Overlay or Textured? Is there any spatial relationship between the glitch and the video? Does it only affect regions redrawn since the start of the video playback? Any warnings in dmesg/Xorg.log?

For this it would be good to have an --enable-debug=full Xorg.log for the glitchy sequence.
Comment 2 Paul Neumann 2011-09-13 10:11:02 UTC
Created attachment 51153 [details]
Xorg.log with --enable-debug=full and reproducing the glitches.
Comment 3 Paul Neumann 2011-09-13 10:11:24 UTC
(In reply to comment #1)
> Xv using the Overlay or Textured?
Don't know about that. How do I find out? (I used `mplayer -vo xv`)

> Is there any spatial relationship between the
> glitch and the video?
I'm not exactly sure what you mean by that, but there are no relationships whatsoever, apart from the video not being minimized.

> Does it only affect regions redrawn since the start of
> the video playback?
I'd say so.
It only appears on the video itself and those parts of the UI that I assume that are redrawn, i.e. it does not appear on random regions, only those that I have placed the mouse over or have been changed in any other way. Also the glitches disappear the moment I close mplayer, as if the whole screen is redrawn.

> Any warnings in dmesg/Xorg.log?
No. Looks pretty much the same as usual.

> For this it would be good to have an --enable-debug=full Xorg.log for the
> glitchy sequence.
Attached Xorg.log nevertheless.
Comment 4 Chris Wilson 2011-09-13 10:40:47 UTC
xvinfo will tell you, but in this case mplayer defaults to port 0 which by default is the TexturedVideo adaptor.

So the goal is to work out what state is left-over after playing video. Hmm, since you previously reported about the lack of state resetting after the video, I'm presuming that this is a continuation of the same bug...

commit 83961051789e418f6022096b1ed2302cb2f05e5b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Sep 13 18:37:01 2011 +0100

    sna/gen3: Reset the shader after playing video
    
    Another piece of state we zap without marking as dirty when playing
    video.
    
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=40842
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Next! :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.